--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,14 +14,15 @@ readme = "README.md"
 
 [[bin]]
 name = "mdbook-godbolt"
-path = "src/bin/mdbook-godbolt.rs"
-
-[lib]
-name = "mdbook_godbolt"
-path = "src/lib.rs"
+path = "src/mdbook-godbolt.rs"
 
 [dependencies]
+anyhow = "1.0.95"
+clap = { version = "4.5.26", features = ["derive"] }
 mdbook = "0.4.40"
+pulldown-cmark = { version = "0.12.2", default-features = false }
+pulldown-cmark-to-cmark = "18.0.0"
+semver = "1.0.24"
 serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 
