Fixed some edge cases when parsing godbolt info headers.
Readded examples to example book.
Cleaned up error unwinding in parsing of godbolt headers.

--- a/example/book.toml
+++ b/example/book.toml
@@ -1,6 +1,6 @@
 [book]
 title = "example"
 
-[preprocessor.remove-emphasis]
+[preprocessor.mdbook-godbolt]
 command = "cargo run --manifest-path=../Cargo.toml --locked"
 
