--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ path = "src/mdbook-godbolt.rs"
 anyhow = "1.0.95"
 clap = { version = "4.5.26", features = ["derive"] }
 mdbook = "0.4.40"
-pulldown-cmark = { version = "0.12.2", default-features = false }
+pulldown-cmark = "0.12.2"
 pulldown-cmark-to-cmark = "18.0.0"
 semver = "1.0.24"
 serde = { version = "1.0.203", features = ["derive"] }
