--- a/example/book.toml
+++ b/example/book.toml
@@ -1,8 +1,9 @@
+preprocessor.assets_version = "0.1.0" # do not edit: managed by `mdbook-godbolt install`
 [book]
 title = "example"
 
-[preprocessor.mdbook-godbolt]
-command = "cargo run --manifest-path=../Cargo.toml --locked"
+[output.html]
+additional-css = ["./mdbook-admonish.css"]
 
 [output.html.playground]
 editable = true
